--- a/app/src/main/res/values/anim.xml
+++ b/app/src/main/res/values/anim.xml
@@ -5,4 +5,8 @@
     <integer name="search_close_fade_delay">50</integer>
     <integer name="search_results_fade_delay">150</integer>
     <integer name="search_results_fade_duration">200</integer>
+
+    <!-- tutorial screens -->
+    <integer name="tutorial_btn_fade_duration">500</integer>
+    <integer name="tutorial_theme_color_fade_duration">500</integer>
 </resources>
