--- a/app/src/main/res/drawable/tutorial_btn_primary_ripple.xml
+++ b/app/src/main/res/drawable/tutorial_btn_primary_ripple.xml
@@ -1,16 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="#2fff"
+    android:color="@color/tutorial_btn_primary_ripple_dark"
     >
 
-    <item>
+    <item android:id="@android:id/mask">
         <shape>
-            <solid android:color="#8000" />
-
-            <stroke
-                android:width="3dp"
-                android:color="@color/white"
-                />
+            <solid android:color="#000" />
 
             <corners android:radius="8dp" />
         </shape>
