--- a/app/src/main/res/drawable/tutorial_btn_secondary.xml
+++ b/app/src/main/res/drawable/tutorial_btn_secondary.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="#8000"
+    android:color="@color/tutorial_btn_secondary_ripple"
     >
 
     <item>
         <shape>
-            <solid android:color="#2fff" />
+            <solid android:color="@color/tutorial_btn_bg" />
 
             <corners android:radius="4dp" />
         </shape>
