--- a/app/src/main/res/layout/fragment_tutorial_meat_types.xml
+++ b/app/src/main/res/layout/fragment_tutorial_meat_types.xml
@@ -10,15 +10,13 @@
 
     <TextView
         android:id="@+id/title"
+        style="@style/TutorialTitleText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@id/meat_types_layout"
         android:layout_marginBottom="64dp"
         android:gravity="center_horizontal|bottom"
-        android:text="Add meat types"
-        android:textColor="@color/white"
-        android:textSize="24sp"
-        android:textStyle="bold"
+        android:text="@string/tutorial_meat_types_title"
         />
 
     <LinearLayout
@@ -35,8 +33,8 @@
             android:id="@+id/title_suggested"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Suggested:"
-            android:textColor="#7fff"
+            android:text="@string/tutorial_meat_types_suggested_title"
+            android:textColor="@color/tutorial_text_secondary"
             android:textSize="14sp"
             />
 
@@ -53,20 +51,13 @@
 
     <Button
         android:id="@+id/btn_custom_meat_type"
+        style="@style/TutorialButtonSecondary"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="16dp"
-        android:background="@drawable/tutorial_btn_secondary"
-        android:paddingStart="16dp"
-        android:paddingEnd="16dp"
-        android:clickable="true"
-        android:text="Add a custom meat type"
-        android:textColor="@color/white"
-        android:textSize="12sp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="80dp"
+        android:text="@string/tutorial_meat_types_add_custom"
         /> <!-- bottom bar is 56 dp in activity layout -->
 
 </RelativeLayout>
