--- a/app/src/main/res/layout/fragment_tutorial_welcome.xml
+++ b/app/src/main/res/layout/fragment_tutorial_welcome.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/root_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="?colorPrimary"
     >
 
     <TextView
+        android:id="@+id/title"
+        style="@style/TutorialTitleText"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
         android:text="@string/app_name"
-        android:textColor="@color/white"
-        android:textSize="24sp"
-        android:textStyle="bold"
         />
 
 </RelativeLayout>
