--- a/app/src/main/res/layout/fragment_tutorial_welcome.xml
+++ b/app/src/main/res/layout/fragment_tutorial_welcome.xml
@@ -7,13 +7,34 @@
     android:background="?colorPrimary"
     >
 
-    <TextView
-        android:id="@+id/title"
-        style="@style/TutorialTitleText"
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:text="@string/app_name"
-        />
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:orientation="vertical"
+        >
+
+        <TextView
+            android:id="@+id/title"
+            style="@style/TutorialTitleText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:text="@string/app_name"
+            />
+
+        <TextView
+            android:id="@+id/subtitle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:gravity="center_horizontal"
+            android:text="@string/tutorial_welcome_swipe_to_start"
+            android:textColor="@color/tutorial_text_secondary"
+            android:textSize="16sp"
+            />
+
+    </LinearLayout>
 
 </RelativeLayout>
