--- a/app/src/main/res/values-v29/keys.xml
+++ b/app/src/main/res/values-v29/keys.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string-array name="pref_dark_theme_entries">
+    <string-array name="pref_theme_entries">
         <item>Light</item>
         <item>Dark</item>
         <item>System default</item>
