--- a/app/src/main/res/values/keys.xml
+++ b/app/src/main/res/values/keys.xml
@@ -11,13 +11,13 @@
         <item>1</item>
     </string-array>
 
-    <string name="pref_dark_theme">dark_theme</string>
-    <string-array name="pref_dark_theme_entries">
+    <string name="pref_theme">theme</string>
+    <string-array name="pref_theme_entries">
         <item>Light</item>
         <item>Dark</item>
         <item>Set by Battery Saver</item>
     </string-array>
-    <string-array name="pref_dark_theme_values">
+    <string-array name="pref_theme_values">
         <item>1</item>
         <item>2</item>
         <item>0</item>
