open tutorial page if first time user

--- a/app/src/main/res/xml/settings.xml
+++ b/app/src/main/res/xml/settings.xml
@@ -12,6 +12,7 @@
             />
 
         <ListPreference
+            app:defaultValue="0"
             app:entries="@array/pref_theme_entries"
             app:entryValues="@array/pref_theme_values"
             app:key="@string/pref_theme"
