--- a/app/src/main/res/values/keys.xml
+++ b/app/src/main/res/values/keys.xml
@@ -3,6 +3,8 @@
     tools:ignore="MissingTranslation"
     >
 
+    <string name="pref_is_first_time_user">is_first_time_user</string>
+
     <string name="pref_last_opened_page">last_opened_page</string>
 
     <string name="pref_mass_unit">mass_unit</string>
