--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -38,7 +38,14 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginEnd="16dp"
                 />
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="24dp"
+                />
+
         </LinearLayout>
+
     </ScrollView>
 
     <TextView
