--- a/app/src/main/res/layout/item_tutorial_meat_type.xml
+++ b/app/src/main/res/layout/item_tutorial_meat_type.xml
@@ -14,6 +14,7 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
+        android:clickable="true"
         android:gravity="center_vertical"
         android:textColor="@color/white"
         android:textSize="16sp"
