--- a/app/src/main/res/layout/dialog_repeat_interval.xml
+++ b/app/src/main/res/layout/dialog_repeat_interval.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ui.contracts.RepeatIntervalDialog"
+    tools:context=".ui.contracts.edit.RepeatIntervalDialog"
     >
 
     <LinearLayout
