--- a/app/src/main/res/layout/activity_edit_meat_types.xml
+++ b/app/src/main/res/layout/activity_edit_meat_types.xml
@@ -9,7 +9,7 @@
     tools:context=".ui.meatTypes.EditMeatTypesActivity"
     >
 
-    <com.martinwalls.meatmanager.ui.misc.CustomRecyclerView
+    <com.martinwalls.meatmanager.ui.common.recyclerview.CustomRecyclerView
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
