--- a/app/src/main/res/layout/activity_choose_currencies.xml
+++ b/app/src/main/res/layout/activity_choose_currencies.xml
@@ -10,7 +10,7 @@
     tools:context=".ui.exchange.ChooseCurrenciesActivity"
     >
 
-    <com.martinwalls.meatmanager.ui.misc.CustomRecyclerView
+    <com.martinwalls.meatmanager.ui.common.recyclerview.CustomRecyclerView
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
