--- a/app/src/main/res/layout/activity_edit_stock.xml
+++ b/app/src/main/res/layout/activity_edit_stock.xml
@@ -176,7 +176,7 @@
         android:visibility="gone"
         >
 
-        <com.martinwalls.meatmanager.ui.misc.AddNewTextView
+        <com.martinwalls.meatmanager.ui.common.AddNewTextView
             android:id="@+id/add_new"
             style="@style/SearchResultsItem.Selectable.AddNew"
             android:layout_width="match_parent"
@@ -187,7 +187,7 @@
             android:paddingBottom="16dp"
             />
 
-        <com.martinwalls.meatmanager.ui.misc.CustomRecyclerView
+        <com.martinwalls.meatmanager.ui.common.recyclerview.CustomRecyclerView
             android:id="@+id/recycler_view_results"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
